Fix gap

--- a/src/components/Movies/films/__list/films__list.css
+++ b/src/components/Movies/films/__list/films__list.css
@@ -2,14 +2,14 @@
     list-style-type: none;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 38px 20px;
+    gap: 32px 32px;
     padding: 0;
 }
 
 @media screen and (max-width: 1270px) {
     .films__list {
         grid-template-columns: repeat(3, 1fr);
-        gap: 30px 30px;
+        gap: 35px 24px;
     }
 }
 
